--- a/css/main.css
+++ b/css/main.css
@@ -430,17 +430,36 @@ body {
 	padding:20px;
 }
 
+/* ------------------- VIEWS --------------------- */
+
 .chapter-list {
-	width:950px;
-	height:100px;
+	width:560px;
+	height:150px;
 	background-color: blue;
-	margin: 20px 0 0;
-	border-radius:15px;
+	padding: 15px 20px;
+	border-radius:10px;
+	margin:0 0 20px;
 }
 
 .chapter-hover {
 	background-color: red;
 }
+
+.user-card {
+	width:260px;
+	float:right;
+	height:200px;
+	border-radius: 8px;
+	background-color: red;
+	padding:20px;
+}
+
+.class-title {
+	width:950px;
+
+}
+
+/* ------------------------------------------------- */
 
 
 #mycanvas {
