--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@ body {
 	float:left;
 }
 
+/* -------------------  HEADER --------------- */
+
 #header {
 	width:100%;
 	height:100px;
@@ -36,11 +38,11 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	font-size:16px;
+	color:white;
 }
 
 #header h1 {
 	margin:0px;
-	color:white;
 	font-size: 40px;
 	padding-top:20px;
 	font-family: 'title';
@@ -49,11 +51,33 @@ body {
 
 #header h2 {
 	margin:0 15px;
+	font-size: 18px;
+	width:600px;
+	font-family: 'titleh2';
+}
+
+#header2 {
+	width:100%;
+	height:60px;
+	background-color: #2C0E78;	
+}
+
+#header2 h1 {
+	margin:0px;
+	font-size: 40px;
+	padding-top:20px;
+	font-family: 'title';
+	font-weight: normal;
+}
+
+#header2 h2 {
+	margin:0 15px;
 	color:white;
 	font-size: 18px;
 	width:600px;
 	font-family: 'titleh2';
 }
+
 
 #footer {
 	width:100%;
@@ -435,14 +459,16 @@ body {
 .chapter-list {
 	width:560px;
 	height:150px;
-	background-color: blue;
+	background-color: #FFFFFF;
 	padding: 15px 20px;
 	border-radius:10px;
+	border: 1px solid #2C0E78;
 	margin:0 0 20px;
+	box-shadow: 5px 5px 2px #888888;
 }
 
 .chapter-hover {
-	background-color: red;
+	background-color: #FFBABA;
 }
 
 .user-card {
@@ -452,6 +478,8 @@ body {
 	border-radius: 8px;
 	background-color: red;
 	padding:20px;
+	box-shadow: 5px 5px 2px #888888;
+
 }
 
 .class-title {
