--- a/css/main.css
+++ b/css/main.css
@@ -573,6 +573,31 @@ body {
 /* ------------------------------------------------- */
 
 
+
+
+/* ------------------- SLIDES ---------------------- */
+
+.slide-nav {
+	width:950px;
+	float:left;
+}
+
+.slide-left {
+	width:50px;
+	height:50px;
+	background-color: blue;
+}
+
+
+.slide-right {
+	width:50px;
+	height:50px;
+	background-color: red;
+}
+
+
+/* -------------------------------------------------- */
+
 #mycanvas {
 	position:relative;
 }
