--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -1,8 +1,9 @@
 	<script type="text/html" id='problem_template'>
-	<div class='slide-nav'>
+	<div class='problem-nav'>
 		<div id='slide_index'></div>
+		<div id='answer_question'>Answer Question</div>
 	</div>
-	<div id='slide_wrapper'>
+	<div id='slide_wrapper' class='problem-wrapper'>
 		<div id='slide_container'>
 		</div>
 		<div id='level_container'></div>
