--- a/templates/slidetemplate.html
+++ b/templates/slidetemplate.html
@@ -1,9 +1,9 @@
 	<script type="text/html" id='slide_template'>
 	<div class='slide-nav'>
 		<div class='slide-left' data-direction='left'></div>
-		<div id='slide_index'>
-		</div>
+		
 		<div class='slide-right' data-direction='right'></div>
+		<div id='slide_index'></div>
 	</div>
 	<div id='slide_wrapper'>
 		<div id='slide_container'>
