--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -1,8 +1,13 @@
 	<script type="text/html" id='problem_template'>
 	<div class='problem-nav'>
+		<div id='answer_question'>Answer Question!</div>
 		<div id='slide_index'></div>
-		<div id='answer_question'>Answer Question</div>
+
 	</div>
+	<div id='answer_container' class='hidden'>
+			<div id='answer_categories'></div>
+			<div id='answer_options'></div>
+		</div>
 	<div id='slide_wrapper' class='problem-wrapper'>
 		<div id='slide_container'>
 		</div>
