--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,50 @@ body {
 	height:100%;
 }
 
+#shadow {
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	background-color: black;
+	display:none;
+	z-index:5;
+	opacity: .7;
+}
+
+#correct {
+	position:fixed;
+	width:500px;
+	height:400px;
+	display: none;
+	background-color: #FFFFFF;
+	border: 1px solid red;
+	border-radius: 10px;
+	z-index:6;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#incorrect {
+	position:fixed;
+	width:500px;
+	height:400px;
+	display: none;
+	background-color: #FFFFFF;
+	border: 1px solid red;
+	border-radius: 10px;
+	z-index:6;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.problem-nav-active {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+
 /* -------------------------------------------------- */
 
 #mycanvas {
