--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -1,7 +1,7 @@
 	<script type="text/html" id='problem_template'>
 	<div id='shadow'></div>
-	<div id='correct'>Correct!</div>
-	<div id='incorrect'>incorrect</div>
+	<div id='correct'><h1>Correct!</h1></div>
+	<div id='incorrect'><h1>incorrect</h1></div>
 	<div class='problem-nav'>
 		<div id='answer_question'>Answer Question!</div>
 		<div id='slide_index'></div>
