minor css changes problem list

--- a/css/main.css
+++ b/css/main.css
@@ -391,6 +391,10 @@ body {
 	float:left;
 }
 
+.problem-list {
+	background: red !important;
+}
+
 /* ------------------------------------------------- */
 
 
