--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,3 +28,16 @@
 	font-weight: bold;
 	margin-top:25px;
 }
+
+#sign_up_container {
+	position:fixed;
+	z-index:6;
+	width:300px;
+	height:200px;
+	color:black;
+	top:200px;
+	left:500px;
+	background-color: white;
+	border: 1px solid #B6FDFF;
+
+}
