--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,14 +30,13 @@
 
 
 #sign_up {
-	color:white;
+	color:red;
 	font-size:18px;
-	border-left: 1px solid white;
-	border-right: 1px solid white;
+	border-left: 1px solid red;
+	border-right: 1px solid red;
 	float:right;
 	padding: 3px 5px;
 	font-weight: bold;
-	margin-top:15px;
 }
 
 #sign_up_container {
@@ -79,4 +78,21 @@
 
 #mid_wrapper > .wrapper{
 	margin-top:0 !important;
+}
+
+.tagline {
+	font-size: 22px;
+	color:#150246;
+	font-family:'titleh2';
+	padding:0;
+	margin:0;
+}
+
+.arrow-down {
+	width: 0; 
+	height: 0; 
+	border-left: 160px solid transparent;
+	border-right: 160px solid transparent;
+	border-top: 40px solid rgba(198, 247, 255, 0.74);
+	margin:0 0 -50px -10px;
 }
