--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,9 +60,6 @@ body {
 	display:inline;
 }
 
-.header-small {
-	height:60px !important;
-}
 
 /* -------------------------------------------- */
 
@@ -70,15 +67,6 @@ body {
 	width:100%;
 	height:100px;
 	float:left;
-}
-
-#header_wrapper {
-	width:960px;
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
-	font-size:16px;
-	color:white;
 }
 
 .wrapper {
@@ -623,3 +611,23 @@ body {
 	background-color: rgba(198, 247, 255, 0.74);
 }
 
+/* ------------- class list --------------------- */
+
+.class-list {
+	width:320px;
+
+	float:left;
+	background-color: red;
+}
+
+.class-item {
+	width:300px;
+	padding:10px;
+	background-color: blue;
+	height:200px;
+}
+
+.class-item h1 {
+	margin:0;
+	padding:0;
+}
