--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@
 	border-right: 1px solid white;
 	float:right;
 	padding: 3px 5px;
-	margin:5px 0 0 0;
+	margin:0;
 }
 
 #sign_in:hover {
@@ -15,7 +15,7 @@
 
 #sign_in_inputs {
 	margin-right:15px;
-	margin-top:5px;
+	color:white;
 }
 
 .sign-in-active {
