--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,14 +28,14 @@ body {
 
 #header {
 	width:100%;
-	height:60px;
+	height:50px;
 	background-color: #150246;
 	/*background-color: #2C0E78;*/
 }
 
 #header h1 {
 	margin:0px;
-	font-size: 40px;
+	font-size: 30px;
 	padding-top:15px;
 	font-family: 'title';
 	font-weight: normal;
@@ -75,12 +75,15 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	font-size:16px;
-	margin-top: 20px;
 
 }
 
 .hidden{
 	display:none;
+}
+
+#main_wrapper {
+	margin-top: 20px;
 }
 
 #title_wrapper {
