--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -3,7 +3,10 @@
 	<div id='correct'><h1>Correct!</h1></div>
 	<div id='incorrect'><h1>incorrect</h1></div>
 	<div class='problem-nav'>
-		<div id='answer_question'>Answer Question!</div>
+		<div class='relative'>
+			<span id='answer_question'>Answer Question!</span>
+		</div>	
+		
 		<div id='slide_index'></div>
 
 	</div>
