--- a/public/css/main.css
+++ b/public/css/main.css
@@ -407,6 +407,26 @@ body {
 	float:left;
 }
 
+.problem-container {
+	width:320px;
+	height:100px;
+	background-color: red;
+	float:left;
+	display:inline;
+	padding:0;
+	margin:0;
+}
+
+.problem-container a {
+
+}
+
+#problem_subnav {
+	width:200px;
+	background-color: blue;
+	float:left;
+}
+
 /*.problem-list {
 	background: #FFCACA !important;
 }*/
