--- a/templates/problemlisttemplate.html
+++ b/templates/problemlisttemplate.html
@@ -1,6 +1,7 @@
 
 	<ul>
-		<a href=''><li>Rookie</li></a>
-		<a href=''><li>Apprentice</li></a>
-		<a href=''><li>Journeyman</li></a>
+		<a href='#/problems/Rookie'><li>Rookie</li></a>
+		<a href='#/problems/Apprentice'><li>Apprentice</li></a>
+		<a href='#/problems/Journeyman'><li>Journeyman</li></a>
+		<a href='#/problems/All'><li>All</li></a>
 	</ul>
