--- a/public/css/main.css
+++ b/public/css/main.css
@@ -408,7 +408,7 @@ body {
 }
 
 .problem-container {
-	width:320px;
+	width:240px;
 	height:100px;
 	background-color: red;
 	float:left;
@@ -421,8 +421,13 @@ body {
 
 }
 
+.problem-list-container {
+	width:720px;
+	float:left;
+}
+
 #problem_subnav {
-	width:200px;
+	width:240px;
 	background-color: blue;
 	float:left;
 }
