small css changes, added basic logic for end of problem situation

--- a/templates/reportcardtemplate.html
+++ b/templates/reportcardtemplate.html
@@ -7,4 +7,11 @@
 	<% for (var i= 0; i< progress.length; i++) { %>
 		<div class='lesson-list'><%= progress[i].lessonid %></div>
 	<% } %>
+	<br>
+
+	Problems Completed:<br>
+	<% for (var i= 0; i< progress.length; i++) { %>
+		<div class='lesson-list'><%= progress[i].problemid %></div>
+	<% } %>
+
 </script>
