--- a/public/css/main.css
+++ b/public/css/main.css
@@ -278,7 +278,7 @@ body {
 
 .chapter-list {
 	width:914px;
-	height:60px;
+	height:30px;
 	float:left;
 	/*background-color: #FFFFFF;*/
 /*	background-color: rgba(0, 0, 255, 0.15);*/
@@ -385,10 +385,19 @@ body {
 	width:274px;
 
 	height:50px;
-	background-color: #DDD6FF;
+	background-color: rgba(255, 255, 255, 0.59);
+	border-radius: 3px;
+	border:1px solid #150246;
 	padding:5px;
 	margin:5px 10px;
+	color:blue;
 }
+
+.check {
+	float:right;
+	margin-top:5px;
+}
+
 
 .odd {
 	background-color: #C2C2FF;
@@ -430,6 +439,14 @@ body {
 	width:240px;
 	background-color: blue;
 	float:left;
+}
+
+#problem_subnav li {
+	padding:10px 0;
+}
+
+#problem_subnav li:hover {
+	background-color: red;
 }
 
 /*.problem-list {
