--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,12 @@ body {
     src: url(../fonts/Artifika-Regular.ttf) format("truetype");
 }
 
+@font-face {
+    font-family: "chapter";
+    src: url(../fonts/absender1.ttf) format("truetype");
+}
+
+
 .fright {
 	float:right;
 
@@ -383,14 +389,15 @@ body {
 
 .lesson-list {
 	width:274px;
-
 	height:50px;
 	background-color: rgba(255, 255, 255, 0.59);
 	border-radius: 3px;
-	border:1px solid #150246;
+	/*border:1px solid #150246;*/
+	border:1px solid blue;
 	padding:5px;
 	margin:5px 10px;
 	color:blue;
+	box-shadow: 3px 3px 5px #888888;
 }
 
 .check {
@@ -405,6 +412,7 @@ body {
 
 .lesson-list h1 {
 	font-size: 16px;
+	padding-left: 10px;
 }
 
 .lesson-list h2 {
